--- a/css/deestyle.css
+++ b/css/deestyle.css
@@ -44,15 +44,13 @@
     color: white;
     height: 105px;
 }
-h1{
-    margin: auto;
-}
 .menurow{
     background-color: chartreuse;
 }
 .banner{
     background-color: lightgray;
-    height: 423px;
+    min-height: 50vh;
+    padding: 2vh;
 }
 .examp{
     background-color: black;
@@ -73,16 +71,22 @@ h1{
     color: black;
 }
 .items {
-    margin-left: 1vw;
-    margin-bottom: 1vw;
-    margin-top: 1vw;
+    margin-bottom: 10px;
+    margin-top: 10px;
     background-color: #454343;
     color: white;
-    height: 50vh;
+    height: 400px;;
+    width: 250px;
 }
+
 .zoom {
-  padding: 2vw;
-  transition: transform .2s; /* Animation */
+    padding: 10px;
+    transition: transform .2s; /* Animation */
+}
+
+.zoom img {
+    padding: 1px;
+    padding-top: 0px;;
 }
 .zoom:hover {
   transform: scale(1.05); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
@@ -98,5 +102,47 @@ h1{
 }
 .profile {
     background-color: blanchedalmond;
-    height: 423px;
+    min-height: 50vh;
+}
+
+.tab td{
+    border: 1px solid black;
+    width: 25%;
+    text-align: center;
+}
+.tab {
+    width: 100%;
+}
+
+.tab1 td{
+    border: 1px solid black;
+    text-align: center;
+}
+
+.tab1 {
+    width: 100%;
+}
+
+.tab2 {
+    width: 100%;
+    height: 40%;
+}
+.tab2 td{
+    border: 1px solid black;
+    text-align: center;
+}
+
+.edittab {
+    width: 80%; 
+}
+.edittab td {
+    width: 25%;
+    text-align: center;
+}
+#scrollbar {
+    height: 200px;
+    overflow-y: auto;
+}
+::-webkit-scrollbar { 
+    display: none; 
 }
