--- a/css/deestyle.css
+++ b/css/deestyle.css
@@ -1,5 +1,5 @@
 .header {
-    background-color: aqua;
+    background-color: #7FFFDA;
     height: 42px;
 }
 .p{
@@ -40,24 +40,36 @@
     width: 15px;
 }
 .title{
-    background-color: grey;
+    background-color: #C7F2E3;
     color: white;
-    height: 105px;
+    height: 255px;
 }
+
+@font-face {
+    font-family: Comfortaa;
+    src: url("../font/Comfortaa/Comfortaa-Medium.ttf") format('truetype'),
+        url("../font/Comfortaa/Comfortaa-Medium.eot") format('eot'),
+        url("../font/Comfortaa/Comfortaa-Medium.woff") format('woff');
+}
+
+* {
+    font-family: Comfortaa;
+}
+
 .menurow{
-    background-color: chartreuse;
+    background-color: #FFA1B5;
 }
 .banner{
-    background-color: lightgray;
-    min-height: 50vh;
-    padding: 2vh;
+    background-color: #C7F2E3;
+    max-height: 100%;
 }
 .examp{
-    background-color: black;
-    height: 600px;
+    background-color: #FFD4DD;
+    height: 100%;
 }
 .menu:hover{
-    background-color: #61c200;
+    border-radius: 10px 10px 10px 10px;
+    background-color: #D90052;
 }
 .navbar-toggler-icon{
     width: 200px;
@@ -68,7 +80,8 @@
     padding: 8px;
     width: 200px;
     text-align: center;
-    color: black;
+    color: White;
+    font-weight: bold;
 }
 .items {
     margin-bottom: 10px;
@@ -77,6 +90,15 @@
     color: white;
     height: 400px;;
     width: 250px;
+}
+
+#totalprice {
+    width: 100px;
+}
+
+#lbltotal {
+    margin-top: 10px;
+    font-weight: bold;
 }
 
 .zoom {
@@ -102,34 +124,46 @@
 }
 .profile {
     background-color: blanchedalmond;
-    min-height: 50vh;
+    margin-bottom: auto;
 }
 
 .tab td{
-    border: 1px solid black;
     width: 25%;
     text-align: center;
 }
 .tab {
+    border: 1px solid black;
     width: 100%;
 }
 
 .tab1 td{
-    border: 1px solid black;
     text-align: center;
+    user-select: none;
+}
+
+.tab1 td:hover {
+    border-radius: 10px 10px 10px 10px;
+    background-color: #069e8a;
+    cursor: pointer;
 }
 
 .tab1 {
+    border-radius: 10px 10px 0px 0px;
     width: 100%;
+    height: 40px;
+    background-color: #09cab0;
+    color: white;
 }
 
 .tab2 {
+    border-radius: 0px 0px 10px 10px;
     width: 100%;
-    height: 40%;
 }
 .tab2 td{
-    border: 1px solid black;
     text-align: center;
+}
+.tab2 tr:nth-child(even) {
+    background-color: rgb(245, 245, 245);
 }
 
 .edittab {
@@ -140,9 +174,10 @@
     text-align: center;
 }
 #scrollbar {
-    height: 200px;
+    height: 500px;
     overflow-y: auto;
 }
 ::-webkit-scrollbar { 
     display: none; 
 }
+
