--- a/css/deestyle.css
+++ b/css/deestyle.css
@@ -1,3 +1,9 @@
+
+
+body {
+    height: 100%;
+}
+
 .header {
     background-color: #7FFFDA;
     height: 42px;
@@ -12,6 +18,18 @@
     margin: 0;
     padding: 0;
     overflow: hidden;
+}
+#filter {
+    width: 400px;
+    margin-left: 10px;
+    margin-bottom: 10px;
+    border-radius: 10px 10px 10px 10px;
+    padding-top: 10px;
+    background-color: white;
+}
+.filteritems {
+    padding-left: 10px;
+    font-size: 15px;
 }
 .lis {
     float: left;
@@ -28,7 +46,7 @@
     background-color: #000000;
 }
 .margin{
-    margin-left: 2.5vw;
+    margin-left: 1.5vw;
     padding-left: 12px;
     padding-right: 12px;
 }
@@ -65,7 +83,7 @@
 }
 .examp{
     background-color: #FFD4DD;
-    height: 100%;
+    height: auto;
 }
 .menu:hover{
     border-radius: 10px 10px 10px 10px;
@@ -139,25 +157,51 @@
 .tab1 td{
     text-align: center;
     user-select: none;
+    background-color: #09cab0;
+}
+
+.tab1 td:first-child{
+    border-radius: 10px 0px 0px 0px;
+    background-color: #09cab0;
+}
+
+.tab1 td:first-child:hover{
+    border-radius: 10px 0px 0px 0px;
+    background-color: #069e8a;
+    cursor: pointer;
+}
+
+.tab1 td:last-child:hover {
+    border-radius: 0px 10px 0px 0px;
+    background-color: #069e8a;
+    cursor: pointer;
+}
+
+.clickable:hover {
+    cursor: pointer;
+}
+
+.tab1 td:last-child {
+    border-radius: 0px 10px 0px 0px;
+    background-color: #09cab0;
 }
 
 .tab1 td:hover {
-    border-radius: 10px 10px 10px 10px;
+    border-radius: 0px 0px 0px 0px;
     background-color: #069e8a;
     cursor: pointer;
 }
 
 .tab1 {
-    border-radius: 10px 10px 0px 0px;
     width: 100%;
     height: 40px;
-    background-color: #09cab0;
     color: white;
 }
 
 .tab2 {
     border-radius: 0px 0px 10px 10px;
     width: 100%;
+    height: 500px;
 }
 .tab2 td{
     text-align: center;
@@ -165,6 +209,7 @@
 .tab2 tr:nth-child(even) {
     background-color: rgb(245, 245, 245);
 }
+
 
 .edittab {
     width: 80%; 
@@ -174,7 +219,7 @@
     text-align: center;
 }
 #scrollbar {
-    height: 500px;
+    height: 50%;
     overflow-y: auto;
 }
 ::-webkit-scrollbar { 
